--- a/gatsby-theme-minimal/package.json
+++ b/gatsby-theme-minimal/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "christopherbiscardi <chris@christopherbiscardi.com> (@chrisbiscardi)",
-  "license": "MIT"
+  "license": "MIT",
+  "peerDependencies": {
+    "gatsby": "^2.0.75"
+  }
 }
