--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-theme-minimal-example",
+  "name": "example",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com:ChristopherBiscardi/gatsby-theme-minimal-example.git",
